Attempt to fix images not showing up on github pages

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,7 +73,7 @@ header nav ul li:first-child a {
 }
 
 .hero {
-	background-image: url('/images/laptop.png');
+	background-image: url('/images/laptop-bg.png');
 	background-repeat: no-repeat;
 	background-position: left;
 	background-size: cover;
